[package]
name = "broom"
version = "0.3.2"
description = "An ergonomic tracing garbage collector that supports mark 'n sweep garbage collection"
categories = ["data-structures", "memory-management", "algorithms"]
keywords = ["garbage", "collection", "gc", "mark", "sweep"]
repository = "https://github.com/zesterer/broom"
authors = ["Joshua Barretto <joshua.s.barretto@gmail.com>"]
edition = "2018"
license = "Apache-2.0/MIT"
readme = "README.md"

[dependencies]
hashbrown = "0.7"
slotmap = "1.0"

[dev-dependencies]
rand = "0.7"
